2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/41_ComparClass.deca
// Description:
//    Programme : comparaison entre les classes
// Resultats:
//      Programme correcte, incorrecte contextuellement car getX n'est pas definie
//
// Historique:
//    cree le 19/01/2024
class A {
    boolean x;
    void setX(boolean x)
    {
        this.x = x;
    }
    
}
class B extends A{

}

{
    A a =new A();
    B b = new B();

    if(a == b)
    {
        print(" a.getX() == ",a.getX());
    }
}